--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp?characterEncoding=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=mzs199847
+
 #mybatis-plus配置
 mybatis-plus.mapper-locations=classpath:./mapper_xml/*.xml
 # Redis
@@ -46,3 +47,6 @@ host=smtp.163.com
 port=25
 #超时时间
 timeOut=25000
+#抄送
+cc=lanvce47@gmail.com
+#cc=sz_hydd@126.com
