--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,14 @@ spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp?characterEncoding=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=mzs199847
+spring.datasource.hikari.read-only=false
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.max-lifetime=60000
+spring.datasource.hikari.login-timeout=5
+spring.datasource.hikari.maximum-pool-size=60
+spring.datasource.hikari.minimum-idle=10
 
 #mybatis-plus配置
 mybatis-plus.mapper-locations=classpath:./mapper_xml/*.xml
@@ -16,6 +24,10 @@ spring.redis.host=175.178.39.23
 #spring.redis.host=127.0.0.1
 spring.redis.port=6379 
 spring.redis.password=mzs199847
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.max-idle=50
+spring.redis.jedis.pool.max-wait=3s
+spring.redis.jedis.pool.min-idle=10
 #租户对应的角色id
 manage.roleId=10
 #租户允许创建的用户数
