--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,10 @@ plugin.runMode=prod
 plugin.pluginPath=plugins
 plugin.pluginConfigFilePath=pluginConfig
 #文件上传根目录
-file.path=/opt/jshERP/upload
+#file.path=/opt/jshERP/upload
+file.path=/opt/apps/jenkins/hydd-boot/upload
+#template 部署后复制到的目录
+template.path=/opt/apps/jenkins/hydd-boot/template
 #文件上传限制(byte)
 spring.servlet.multipart.max-file-size=10485760
 spring.servlet.multipart.max-request-size=10485760
