--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,17 +51,16 @@ spring.servlet.multipart.max-request-size=10485760
 
 ########  邮件配置     ########
 #邮箱
-userName=lanvce47@163.com
+userName=sz_hydd@126.com
 #邮箱授权码
-passWord=LUGMJFUFVJGYMGLJ
+passWord=XVBTVBRRYNFZVCFU
 #发送人
-emailForm=lanvce47@163.com
+emailForm=深圳市红雨点点科技有限公司
 #服务器
-host=smtp.163.com
+host=smtp.126.com
 #服务器端口
 port=25
 #超时时间
 timeOut=25000
 #抄送
-cc=lanvce47@gmail.com
-#cc=sz_hydd@126.com
+cc=sz_hydd@126.com
