修改邮件发送人；修改邮件正文

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ userName=sz_hydd@126.com
 #邮箱授权码
 passWord=XVBTVBRRYNFZVCFU
 #发送人
-emailForm=深圳市红雨点点科技有限公司
+emailForm=sz_hydd@126.com
 #服务器
 host=smtp.126.com
 #服务器端口
