--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
 			<artifactId>spring-test</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
