--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=9999
+server.port=8888
 #登录超时-秒
 server.servlet.session.timeout=36000
 #服务路径
 server.servlet.context-path=/jshERP-boot
 #数据库连接
-spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp_dev?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=mzs199847
