--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
-server.port=9999
+# prod
+# server.port=9999
+
+#dev
+server.port=7777
+
 #登录超时-秒
 server.servlet.session.timeout=36000
 #服务路径
 server.servlet.context-path=/jshERP-boot
 #数据库连接
-spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp_dev?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+
+#spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=mzs199847
@@ -40,11 +47,18 @@ demonstrate.open=false
 plugin.runMode=prod
 plugin.pluginPath=plugins
 plugin.pluginConfigFilePath=pluginConfig
-#文件上传根目录
+#文件上传根目录 prod
 #file.path=/opt/jshERP/upload
-file.path=/opt/apps/jenkins/hydd-boot/upload
+#file.path=/opt/apps/jenkins/hydd-boot/upload
 #template 部署后复制到的目录
-template.path=/opt/apps/jenkins/hydd-boot/template
+#template.path=/opt/apps/jenkins/hydd-boot/template
+
+
+#文件上传根目录 prod
+file.path=/opt/apps/jenkins/dev-hydd-boot/upload
+template.path=/opt/apps/jenkins/dev-hydd-boot/template
+
+
 #文件上传限制(byte)
 spring.servlet.multipart.max-file-size=10485760
 spring.servlet.multipart.max-request-size=10485760
