--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,80 +1,1 @@
-# prod
-# server.port=9999
-
-#dev
-server.port=7777
-
-#登录超时-秒
-server.servlet.session.timeout=36000
-#服务路径
-server.servlet.context-path=/jshERP-boot
-#数据库连接
-spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp_dev?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-
-#spring.datasource.url=jdbc:mysql://175.178.39.23:3306/jsh_erp?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=mzs199847
-spring.datasource.hikari.read-only=false
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.idle-timeout=60000
-spring.datasource.hikari.validation-timeout=3000
-spring.datasource.hikari.max-lifetime=60000
-spring.datasource.hikari.login-timeout=5
-spring.datasource.hikari.maximum-pool-size=60
-spring.datasource.hikari.minimum-idle=10
-
-#mybatis-plus配置
-mybatis-plus.mapper-locations=classpath:./mapper_xml/*.xml
-# Redis
-spring.redis.host=175.178.39.23
-#spring.redis.host=127.0.0.1
-spring.redis.port=6379 
-spring.redis.password=mzs199847
-spring.redis.jedis.pool.max-active=50
-spring.redis.jedis.pool.max-idle=50
-spring.redis.jedis.pool.max-wait=3s
-spring.redis.jedis.pool.min-idle=10
-#租户对应的角色id
-manage.roleId=10
-#租户允许创建的用户数
-tenant.userNumLimit=1000000
-#租户允许试用的天数
-tenant.tryDayLimit=3000
-#演示模式开关-默认关闭:false
-demonstrate.open=false
-#插件配置
-plugin.runMode=prod
-plugin.pluginPath=plugins
-plugin.pluginConfigFilePath=pluginConfig
-#文件上传根目录 prod
-#file.path=/opt/jshERP/upload
-#file.path=/opt/apps/jenkins/hydd-boot/upload
-#template 部署后复制到的目录
-#template.path=/opt/apps/jenkins/hydd-boot/template
-
-
-#文件上传根目录 prod
-file.path=/opt/apps/jenkins/dev-hydd-boot/upload
-template.path=/opt/apps/jenkins/dev-hydd-boot/template
-
-
-#文件上传限制(byte)
-spring.servlet.multipart.max-file-size=10485760
-spring.servlet.multipart.max-request-size=10485760
-
-########  邮件配置     ########
-#邮箱
-userName=sz_hydd@126.com
-#邮箱授权码
-passWord=XVBTVBRRYNFZVCFU
-#发送人
-emailForm=sz_hydd@126.com
-#服务器
-host=smtp.126.com
-#服务器端口
-port=25
-#超时时间
-timeOut=25000
-#抄送
-cc=sz_hydd@126.com
+spring.profiles.active=@profileActive@
